--- a/search.html
+++ b/search.html
@@ -4,565 +4,20 @@
 <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Поиск - KostySystem</title>
+<meta http-equiv="Refresh" content="0; URL=/#search">
   <link rel="icon" href="favicon.ico">
 <div id="styles">
 <link rel="stylesheet" type="text/css" href="/styles.css" />
 </div>
-<script src="https://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU" type="text/javascript"></script>
-<div id="fnd"><style> .zaprosi {display: none;} </style></div>
- <style>
-            .card {
-                display: block;
-            }
-            .card2 {
-                display: block;
-            }
-
-            .card.hide {
-                display: none;
-            }
-input[type="text"] {
-  padding: 11px;
-  border: 1px solid #000;
-  border-radius: 5px;
-}
-        </style>
 </head>
 <body>
-<div id="menu">
-<div class="zakrep">
-<nav>  
-   <ul class="topmenu">
-    <li> <h2> KostySystem</h2></li>
-    <li> </li>
-    <li> </li>
-    <li> </li>
-    <li> </li>
-    <li> </li>
-    <li><a href="../index.html">Главная</a></li>
-    <li><a href="../newbie/index.html">Для новичков</a></li>
-    <li><a href="../articles/index.html">KostySystem - статьи</a></li>
-    <li><a href="../blog/index.html">Блог</a></li>
-  </ul>
-        <div class="menu">
+<h3>Эта устаревшая версия поиска больше недоступна. Воспользуйтесь <a href="/#search">новой</a></h3>
 <br>
-    <input type="checkbox" id="burger-checkbox" class="burger-checkbox">
-    <label for="burger-checkbox" class="burger"></label>
-    <ul class="menu-list">
-<br><br>
-<center>
-            <li><h3>KostySystem</h3></li>
-</center>
-            <li><a class="menu-item" href="../index.html">Главная</a></li>
-            <li><a class="menu-item" href="../newbie/index.html">Для новичков</a></li>
-            <li><a class="menu-item" href="../articles/index.html">KostySystem - статьи</a></li>
-            <li><a class="menu-item" href="../blog/index.html">Блог</a></li>
-       </ul>
-<br>
-</div>
-</div>
-</nav>
-</div>
-<center>
-<br>
-<h1>KostySystem - поиск по сайту <span class="beta">ᴮᴱᵀᴬ</span></h1>
-<h3>Начните вводить то, что вы хотите найти.</h3>
-<hr>
-<br>
-  <input type="text" id="elastic" placeholder="Поиск по сайту" onkeydown="search()"/>
-  <script>
-function search() {
-    if(event.keyCode == 13) {
-        location.hash = '#';
-        location.hash = 'results';
-    }
-}
-  </script>
-<p>Результаты по вашему запросу ищутся автоматически. Никуда кликать не нужно.</p>
-<br><br><br>
-<br>
-<div id="fnd"><br></div>
-<div class="zaprosi" id="results">
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem</h4>
-<div class="card2"><h2><a href="/">Главная</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem</h4>
-<div class="card2"><h2><a href="/schedule.html">Расписание выхода нового контента</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem</h4>
-<div class="card2"><h2><a href="/blog/">KostySystem Блог</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem</h4>
-<div class="card2"><h2><a href="/newbie/">Для новичков</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem</h4>
-<div class="card2"><h2><a href="/articles/">KostySystem - статьи</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-
-
-
-
-
-
-
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem - статьи</h4>
-<p>18.09.2024, 22:15</p>
-<div class="card2"><h2><a href="/articles/9.html">Современный браузер для Windows XP</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem - статьи</h4>
-<p>11.09.2024, 22:40</p>
-<div class="card2"><h2><a href="/articles/8.html">Как загрузить Windows 7 в безопасном режиме.</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem - статьи</h4>
-<p>05.09.2024, 23:30</p>
-<div class="card2"><h2><a href="/articles/7.html">Как изменить имя пользователя в Windows.</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem - статьи</h4>
-<p>04.09.2024, 21:30</p>
-<div class="card2"><h2><a href="/articles/6.html">Как установить DOSBOX на Windows</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem - статьи</h4>
-<p>30.08.2024, 20:30</p>
-<div class="card2"><h2><a href="/articles/5.html">Как узнать подробные характеристики вашего ПК</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem - статьи</h4>
-<p>21.08.2024, 22:00</p>
-<div class="card2"><h2><a href="/articles/4.html">Как принудительно завершить процесс Windows</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem - статьи</h4>
-<p>16.08.2024, 16:00</p>
-<div class="card2"><h2><a href="/articles/3.html">Как создать скрытую папку в Windows - Лайфхак!</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem - статьи</h4>
-<p>05.08.2024, 21:31</p>
-<div class="card2"><h2><a href="/articles/2.html">Аварийная перезагрузка компьютера</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem - статьи</h4>
-<p>03.08.2024, 18:00</p>
-<div class="card2"><h2><a href="/articles/1.html">Как загрузить Windows 10 или Windows 11 в безопасном режиме</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-
-
-
-
-
-
-
-
-
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>Для новичков</h4>
-<p>24.09.2024, 22:47</p>
-<div class="card2"><h2><a href="/newbie/13.html">Как установить Notepad++ в Windows</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>Для новичков</h4>
-<p>23.09.2024, 22:30</p>
-<div class="card2"><h2><a href="/newbie/12.html">Как найти нужный файл в Windows с помощью проводника</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>Для новичков</h4>
-<p>18.09.2024, 12:58</p>
-<div class="card2"><h2><a href="/newbie/11.html">Как установить Opera в Windows</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div> 
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>Для новичков</h4>
-<p>16.09.2024, 21:58</p>
-<div class="card2"><h2><a href="/newbie/10.html">Как установить LibreOffice в Windows.</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div> 
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>Для новичков</h4>
-<p>09.09.2024, 22:40</p>
-<div class="card2"><h2><a href="/newbie/9.html">Как установить VK Messenger на Windows.</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div> 
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>Для новичков</h4>
-<p>07.09.2024, 21:30</p>
-<div class="card2"><h2><a href="/newbie/8.html">Как выключить компьютер через заданное время.</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div> 
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>Для новичков</h4>
-<p>28.08.2024, 23:00</p>
-<div class="card2"><h2><a href="/newbie/7.html">Установка VLC Media Player.</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div> 
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>Для новичков</h4>
-<p>18.08.2024, 19:00</p>
-<div class="card2"><h2><a href="/newbie/6.html">Установка архиватора 7-Zip.</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div> 
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>Для новичков</h4>
-<p>28.07.2024, 21:30</p>
-<div class="card2"><h2><a href="/newbie/5.html">Возвращение значка "Этот компьютер", "Компьютер" или "Мой Компьютер" на рабочий стол.</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div> 
-       <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>Для новичков</h4>
-<p>14.07.2024, 17:00</p>
-<div class="card2"><h2><a href="/newbie/4.html">Установка веб-браузеров.</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>Для новичков</h4>
-<p>10.07.2024, 22:00</p>
-<div class="card2"><h2><a href="/newbie/3.html">Как узнать свою версию Windows.</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>Для новичков</h4>
-<p>08.07.2024, 18:00</p>
-<div class="card2"><h2><a href="/newbie/2.html">Создание ярлыков на рабочем столе.</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>Для новичков</h4>
-<p>07.07.2024, 19:00</p>
-<div class="card2"><h2><a href="/newbie/1.html">Начало работы за ПК - АЗЫ.</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-
-
-
-
-
-
-
-
-
-
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem - Блог</h4>
-<p>20.09.2024, 23:39</p>
-<div class="card2"><h2><a href="/blog/5.html">21.09.2024 в 23:00 на нашем сайте пройдут технические работы!</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem - Блог</h4>
-<p>06.09.2024, 23:30</p>
-<div class="card2"><h2><a href="/blog/4.html">С 15 октября мы откроем новый раздел "Статьи по Linux"</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem - Блог</h4>
-<p>01.09.2024, 0:00</p>
-<div class="card2"><h2><a href="/blog/3.html">Всех с 1 сентября, а так-же мы выпустили новое обновление сайта!</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem - Блог</h4>
-<p>31.08.2024, 18:30</p>
-<div class="card2"><h2><a href="/blog/2.html">Нас ждёт обновление!</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-        <div class="card">
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem - Блог</h4>
-<p>29.08.2024, 20:25</p>
-<div class="card2"><h2><a href="/blog/1.html">Запуск нашего блога!</a></h2></div>
-<br>
-<hr>
-<br>
-<br>
-        </div>
-</div>
-
-
-
-        <script type="text/javascript">
-            const elastic = document.querySelector('#elastic')
-
-            elastic.addEventListener('input', (ev) => {
-                const value = ev.target.value.trim()
-                const elasticItems = document.querySelectorAll('.card')
-                const searchRegExp = new RegExp(value, 'gi')
-
-                if (value === '') {
-                    elasticItems.forEach((el) => {
-                        el.classList.add('hide')
-                    })
-                    return
-                }
-
-                elasticItems.forEach((el) => {
-                    const innerCard = el.querySelector('.card2')
-                    const elementText = innerCard.textContent
-                    const isContainsSearchRequest = searchRegExp.test(elementText)
-                    if (!isContainsSearchRequest) {
-                        el.classList.add('hide')
-var fnd = document.getElementById("fnd");
-fnd.innerHTML = "<style> .zaprosi {display: block;} </style>";
-                    } else {
-                        el.classList.remove('hide')
-var fnd = document.getElementById("fnd");
-fnd.innerHTML = "<style> .zaprosi {display: block;} </style>";
-                    }
-                })
-            })
-        </script>
-<br><br><br><br>
-</center>
 <div class="copyright" id="copyright">
 <center> <br><br> <h2>KostySystem</h2> <h5>© KostySystem</h5> <br> 
 <p>! JavaScript отключён. Некоторые элементы сайта могут отображаться неправильно.</p>
 </center>
 </div>
 <script src="/elements.js"></script>
-<script src="/block.js" type="text/javascript"></script>
 </body>
 </html>
