--- a/404.html
+++ b/404.html
@@ -71,7 +71,7 @@ color: gray;
 <h1><a href="/">Перейти на главную</a></h1>
 <h1><a href="#search">Найти другую страничку</a></h1>
 <br><br><br>
-<h4 class="nydetcya-kogda-nibyd">А эта страничка, возможно, когда-нибудь и найдётся!</h4>
+<h4 class="nydetcya-kogda-nibyd"><a href="#page" onclick="pashalka()" id="nydkognib" style="cursor: text; text-decoration: none;">А эта страничка, возможно, когда-нибудь и найдётся!</a></h4>
 <br><br>
 </center>
 <div class="copyright" id="copyright">
@@ -81,6 +81,141 @@ color: gray;
 </div>
 <script src="/elements.js"></script>
 <script src="/block.js" type="text/javascript"></script>
+<script>
+var secret = 0;
+function pashalka() {
+        secret++;
+    if (secret == 50){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Мы не можем отыскать эту страничку! Возможно она когда-нибудь найдётся!";
+}
+    if (secret == 60){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Мы ищем, ищем, но так и не можем найти эту страничку! Возможно она когда-нибудь найдётся!";
+}
+    if (secret == 61){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Мы ищем, ищем, ищем, ищем, но так и не можем найти эту страничку! Возможно она когда-нибудь найдётся!";
+}
+    if (secret == 62){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Мы ищем, ищем, ищем, ищем, ищем, но так и не можем найти эту страничку! Возможно она когда-нибудь найдётся!";
+}
+    if (secret == 63){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Мы ищем, ищем, ищем, ищем, ищем, ищем, но так и не можем найти эту страничку! Возможно она когда-нибудь найдётся!";
+}
+    if (secret == 64){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Мы ищем, ищем, ищем, ищем, ищем, ищем, ищем, но так и не можем найти эту страничку! Возможно она когда-нибудь найдётся!";
+}
+    if (secret == 65){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Мы ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, но так и не можем найти эту страничку! Возможно она когда-нибудь найдётся!";
+}
+    if (secret == 66){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Мы ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, но так и не можем найти эту страничку! Возможно она когда-нибудь найдётся!";
+}
+    if (secret == 67){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Мы ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, но так и не можем найти эту страничку! Возможно она когда-нибудь найдётся!";
+}
+    if (secret == 68){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Мы ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, но так и не можем найти эту страничку! Возможно она когда-нибудь найдётся!";
+}
+    if (secret == 69){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Мы ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, но так и не можем найти эту страничку! Возможно она когда-нибудь найдётся!";
+}
+    if (secret == 70){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Мы ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, ищем, но так и не можем найти эту страничку! Возможно она когда-нибудь найдётся!";
+}
+    if (secret == 80){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Эта страница не найдена.";
+}
+    if (secret == 90){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Может достаточно?";
+}
+    if (secret == 100){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "404 404 404 404 404 404";
+}
+    if (secret == 120){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Может хватит нажимать по мне??";
+}
+    if (secret == 140){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Я - просто текст. Я не кликер...";
+}
+    if (secret == 160){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "404 Not Found";
+}
+    if (secret == 190){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Д";
+}
+    if (secret == 191){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "До";
+}
+    if (secret == 192){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Дос";
+}
+    if (secret == 193){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Дост";
+}
+    if (secret == 194){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Доста";
+}
+    if (secret == 195){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Достат";
+}
+    if (secret == 196){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Достато";
+}
+    if (secret == 197){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Достаточ";
+}
+    if (secret == 198){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Достаточн";
+}
+    if (secret == 199){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Достаточно";
+}
+    if (secret == 200){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Я не кликер. Я обычный текст! Вы закликали меня уже.... вы кликнули аж 200 раз!";
+}
+    if (secret == 205){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "С меня хватит.";
+}
+    if (secret == 210){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "Я ухожу!";
+}
+    if (secret == 211){
+var nydkognib = document.getElementById("nydkognib");
+nydkognib.innerHTML = "<br>";
+}
+}
+</script>
+</script>
 <script>
 var notfoundurl = window.location.pathname
     if (notfoundurl == "/a"){
