--- a/searchframe.html
+++ b/searchframe.html
@@ -440,6 +440,19 @@ parent.sexit();
 <hr>
 <br>
 <h4>KostySystem - Блог</h4>
+<p>27.09.2024, 19:25</p>
+<div class="card2"><h2><a href="/blog/6.html" target="_parent">Запущена новая версия поиска KostySystem!</a></h2></div>
+<br>
+<hr>
+<br>
+<br>
+        </div>
+        <div class="card">
+<br>
+<br>
+<hr>
+<br>
+<h4>KostySystem - Блог</h4>
 <p>20.09.2024, 23:39</p>
 <div class="card2"><h2><a href="/blog/5.html" target="_parent">21.09.2024 в 23:00 на нашем сайте пройдут технические работы!</a></h2></div>
 <br>
