--- a/404.html
+++ b/404.html
@@ -71,7 +71,7 @@ color: gray;
 <h1><a href="/">Перейти на главную</a></h1>
 <h1><a href="#search">Найти другую страничку</a></h1>
 <br><br><br>
-<h4 class="nydetcya-kogda-nibyd"><a href="#page" onclick="pashalka()" id="nydkognib" style="cursor: text; text-decoration: none;">А эта страничка, возможно, когда-нибудь и найдётся!</a></h4>
+<h4 class="nydetcya-kogda-nibyd"><a onclick="pashalka()" id="nydkognib" style="cursor: text; text-decoration: none;">А эта страничка, возможно, когда-нибудь и найдётся!</a></h4>
 <br><br>
 </center>
 <div class="copyright" id="copyright">
