--- a/newbie/13.html
+++ b/newbie/13.html
@@ -134,7 +134,7 @@
 
 <h3><a href="index.html">К списку статей</a></h3>
 <h3><a href="12.html">Прошлая статья</a></h3>
-<h3><a href="#soon">Следующая статья (пока не написана)</a></h3>
+<h3><a href="14.html">Следующая статья</a></h3>
 
 <br>
 </center>
