--- a/newbie/index.html
+++ b/newbie/index.html
@@ -54,6 +54,16 @@
 <br>
 <hr>
 <br>
+<p>30.09.2024, 21:00</p>
+<h2><a href="14.html">Как заблокировать сайт на компьютере</a></h2>
+<br>
+<hr>
+<br>
+<br>
+<br>
+<br>
+<hr>
+<br>
 <p>24.09.2024, 22:47</p>
 <h2><a href="13.html">Как установить Notepad++ в Windows</a></h2>
 <br>
