--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 <br>
 <hr>
 <br>
-<h4>KostySystem - Блог</h4>
-<p>27.09.2024, 19:25</p>
-<h2><a href="/blog/6.html">Запущена новая версия поиска KostySystem!</a></h2>
+<h4>Для новичков</h4>
+<p>30.09.2024, 21:00</p>
+<h2><a href="/newbie/14.html">Как заблокировать сайт на компьютере</a></h2>
 <br>
 <hr>
 <br>
@@ -93,17 +93,6 @@
 <h4>Для новичков</h4>
 <p>24.09.2024, 23:47</p>
 <h2><a href="/newbie/13.html">Как установить Notepad++ в Windows</a></h2>
-<br>
-<hr>
-<br>
-<br>
-<br>
-<br>
-<hr>
-<br>
-<h4>Для новичков</h4>
-<p>23.09.2024, 22:35</p>
-<h2><a href="/newbie/12.html">Как найти нужный файл в Windows с помощью проводника</a></h2>
 <br>
 <hr>
 <br>
