--- a/searchframe.html
+++ b/searchframe.html
@@ -261,6 +261,19 @@ parent.sexit();
 <hr>
 <br>
 <h4>Для новичков</h4>
+<p>30.09.2024, 21:00</p>
+<div class="card2"><h2><a href="/newbie/14.html" target="_parent">Как заблокировать сайт на компьютере</a></h2></div>
+<br>
+<hr>
+<br>
+<br>
+        </div>
+        <div class="card">
+<br>
+<br>
+<hr>
+<br>
+<h4>Для новичков</h4>
 <p>24.09.2024, 22:47</p>
 <div class="card2"><h2><a href="/newbie/13.html" target="_parent">Как установить Notepad++ в Windows</a></h2></div>
 <br>
