--- a/offline/offline-landing.html
+++ b/offline/offline-landing.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8" />
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ошибка - KostySystem</title>
 <body>
-<h2>Не удалось установить соединение с сервером.</h2>
-<h3>Проверьте подключение к интернету и повторите попытку.</h3>
+<center>
+<h2>Нет подключения к интернету!</h2>
+<h3>Подключитесь к интернету, а затем повторите попытку.</h3>
 <br>
-<h4><a href="#" onclick="window.location.reload()">Повторить попытку</a></h4>
+<h4><a href="#" onclick="window.location.reload()" style="color: #000">Повторить попытку</a></h4>
+</center>
 </body>
 </html>
