--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@
 <hr>
 <br>
 <h4>Для новичков</h4>
+<p>02.10.2024, 21:48</p>
+<h2><a href="/articles/10.html">Как установить любой сайт как приложение в Windows</a></h2>
+<br>
+<hr>
+<br>
+<br>
+<br>
+<br>
+<hr>
+<br>
+<h4>Для новичков</h4>
 <p>30.09.2024, 21:00</p>
 <h2><a href="/newbie/14.html">Как заблокировать сайт на компьютере</a></h2>
 <br>
