--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <br>
 <hr>
 <br>
-<h4>Для новичков</h4>
+<h4>KostySystem - статьи</h4>
 <p>02.10.2024, 21:48</p>
 <h2><a href="/articles/10.html">Как установить любой сайт как приложение в Windows</a></h2>
 <br>
