--- a/offline/offline-landing.html
+++ b/offline/offline-landing.html
@@ -5,11 +5,13 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ошибка - KostySystem</title>
 <body>
-<center>
-<h2>Нет подключения к интернету!</h2>
-<h3>Подключитесь к интернету, а затем повторите попытку.</h3>
+<h2>Ой!</h2>
+<h3>Не удалось загрузить веб-сайт KostySystem!</h3>
+<p><b>Попробуйте сделать следующее:</b></p>
+ <li>Проверьте подключение к интернету</li>
+ <li>Убедитесь, верно ли установлена дата на вашем устройстве.</li>
+<h4>Затем попробуйте ещё раз.</h4>
 <br>
 <h4><a href="#" onclick="window.location.reload()" style="color: #000">Повторить попытку</a></h4>
-</center>
 </body>
 </html>
