--- a/newbie/14.html
+++ b/newbie/14.html
@@ -124,7 +124,7 @@
 
 <h3><a href="index.html">К списку статей</a></h3>
 <h3><a href="13.html">Прошлая статья</a></h3>
-<h3><a href="#soon">Следующая статья (пока не написана)</a></h3>
+<h3><a href="#soon" onclick="soon()">Следующая статья (Пока не написана)</a></h3>
 
 <br>
 </center>
