--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@ left: -23px;
 }
 
 .text404 {
-position: relative; top: -30px;
+position: relative;
 }
 </style>
 <div id="imelivvidy">
@@ -76,7 +76,7 @@ position: relative; top: -30px;
 </div>
 <br>
 <br>
-<p style="font-family: Serif; font-size: 11ex; color: rgba(0, 0, 0, 0.2); text-align: right; position: relative; left: -23px; top: -130px;">404</p>
+<p style="font-family: Serif; font-size: 11ex; color: rgba(0, 0, 0, 0.2); text-align: right; position: relative; left: -23px;">404</p>
 <!--
 <img src="/images/404image.png" width="70" height="70">
 -->
