--- a/404.html
+++ b/404.html
@@ -29,6 +29,7 @@ left: -23px;
 
 .text404 {
 position: relative;
+top: -20px;
 }
 </style>
 <div id="imelivvidy">
@@ -76,7 +77,7 @@ position: relative;
 </div>
 <br>
 <br>
-<p style="font-family: Serif; font-size: 11ex; color: rgba(0, 0, 0, 0.2); text-align: right; position: relative; left: -23px;">404</p>
+<p style="font-family: Serif; font-size: 9ex; color: rgba(0, 0, 0, 0.2); text-align: right; position: relative; top: -20px; left: -23px;">404</p>
 <!--
 <img src="/images/404image.png" width="70" height="70">
 -->
