--- a/404.html
+++ b/404.html
@@ -27,10 +27,6 @@ position: relative;
 left: -23px;
 }
 
-.text404 {
-position: relative;
-top: -20px;
-}
 </style>
 <div id="imelivvidy">
 </div>
@@ -77,13 +73,13 @@ top: -20px;
 </div>
 <br>
 <br>
-<p style="font-family: Serif; font-size: 9ex; color: rgba(0, 0, 0, 0.2); text-align: right; position: relative; top: -20px; left: -23px;">404</p>
+<p style="font-family: Serif; font-size: 9ex; color: rgba(0, 0, 0, 0.2); text-align: right;">404</p>
 <!--
 <img src="/images/404image.png" width="70" height="70">
 -->
 <center>
 <div class="text404">
-<h1>Пустовато здесь...</h1>
+<h1 style="font-size: 5ex;">Пустовато здесь...</h1>
 <p style="font-size: 3ex;">Мы обыскали всё, что только возможно...<br>... но эту страницу мы так и не нашли ...</p>
 <p style="font-size: 3ex;">Это не значит что нужно отчаиваться!<br>Ведь не найдена только эта страница, а у нас на сайте много других найденных страниц!</p>
 <p style="font-size: 3ex;">Вы можете воспользоваться поиском по сайту, чтобы найти нужную вам страницу или перейти на главную!</p>
