--- a/404.html
+++ b/404.html
@@ -71,9 +71,8 @@ left: -23px;
 <div id="page404">
 <div id="vozmozno">
 </div>
-<br>
-<br>
-<p style="font-family: Serif; font-size: 9ex; color: rgba(0, 0, 0, 0.2); text-align: right;">404</p>
+
+<p style="font-family: Serif; font-size: 9ex; color: rgba(0, 0, 0, 0.2); text-align: center;">404</p>
 <!--
 <img src="/images/404image.png" width="70" height="70">
 -->
