--- a/searchframe.html
+++ b/searchframe.html
@@ -135,6 +135,19 @@ parent.sexit();
 <hr>
 <br>
 <h4>KostySystem - статьи</h4>
+<p>16.10.2024, 21:40</p>
+<div class="card2"><h2><a href="/articles/12.html" target="_parent">KolibriOS - Самая маленькая ОС</a></h2></div>
+<br>
+<hr>
+<br>
+<br>
+        </div>
+        <div class="card">
+<br>
+<br>
+<hr>
+<br>
+<h4>KostySystem - статьи</h4>
 <p>09.10.2024, 21:47</p>
 <div class="card2"><h2><a href="/articles/11.html" target="_parent">Как установить Telegram в Windows</a></h2></div>
 <br>
